fix center align

--- a/public/styles/bundle.css
+++ b/public/styles/bundle.css
@@ -516,7 +516,6 @@ md-list {
 
 .turtle-content {
   width: 100%;
-  display: inline-block;
 }
 
 .timezone {
