--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -88,7 +88,6 @@ md-list {
 
 .turtle-content {
   width: 100%;
-  display: inline-block;
 }
 
 .timezone {
